@@ -17,3 +17,10 @@ dependencies {
 tasks.named<JavaCompile>("compileJava").configure {
     options.release.set(21)
 }
+
+tasks.named<JavaExec>("run").configure {
+    jvmArgs(
+        "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+        "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED"
+    )
+}
